--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,12 +9,26 @@
   "author": "phu phan",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.14.10"
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.14.10",
+    "@types/sequelize": "^4.28.20",
+    "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@types/pg": "^8.11.6",
     "bcryptjs": "^2.4.3",
     "buffer": "^6.0.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
   }
 }
