--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
+    "@hookform/resolvers": "^3.9.0",
     "autoprefixer": "^10.4.19",
     "bootstrap": "^5.3.3",
     "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "react-toastify": "^10.0.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -29,6 +33,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "next": "^14.2.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
