--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.4",
     "@hookform/resolvers": "^3.9.0",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "postcss": "^8.4.39",
     "react": "^18.3.1",
