--- a/back-end/package.json
+++ b/back-end/package.json
@@ -43,6 +43,7 @@
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
+    "rsa-json": "^0.2.1",
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
     "tsc": "^2.0.4"
