--- a/back-end/package.json
+++ b/back-end/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.11",
     "@types/sequelize": "^4.28.20",
     "ts-node": "^10.9.2",
@@ -41,10 +42,11 @@
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
-    "rsa-json": "^0.2.1",
+    "rsa-json": "^0.0.2",
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
     "tsc": "^2.0.4"
