--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "js-cookie": "^3.0.5",
     "postcss": "^8.4.39",
     "react": "^18.3.1",
