--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
     "bootstrap-icons": "^1.11.3",
     "js-cookie": "^3.0.5",
     "postcss": "^8.4.39",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
