--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.1.4",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^5.16.5",
+    "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.5",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
